Update curriculum html code.html

--- a/curriculum html code.html
+++ b/curriculum html code.html
@@ -8,7 +8,7 @@
 <body><!--Corpo da html-->
 
 <!--Código reponsavel por fazer o link com o CSS-->
-	<link rel="stylesheet" type="text/css" href="estilo.css">
+	<link rel="stylesheet" type="text/css" href="style.css">
 
 <!-- Código usado para adicionar uma imagem ao html
 	<p1>
